objects/CodeScan_User__c.object
<CustomObject>
    <fields>
        <fullName>Access_Blocked_on_Lead__c</fullName>
        <formula>Lead__r.Access_Blocked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Blocked on Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Link__c</fullName>
        <label>App Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <formula>Organization__r.Billing_Status__c</formula>
        <label>Billing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CodeScan_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>SUBSTITUTE(Email__c, LEFT(Email__c, FIND(&quot;@&quot;, Email__c)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastLogin__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <formula>Lead__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>Lead__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>CodeScan_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoginCount__c</fullName>
        <label>Login Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <label>Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Key__c</fullName>
        <formula>Organization__r.Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>CodeScan Organization</label>
        <referenceTo>CodeScan_Organization__c</referenceTo>
        <relationshipName>CodeScan_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>provisioning</fullName>
                </value>
                <value>
                    <fullName>scan</fullName>
                </value>
                <value>
                    <fullName>admin</fullName>
                </value>
                <value>
                    <fullName>gateadmin</fullName>
                </value>
                <value>
                    <fullName>profileadmin</fullName>
                </value>
                <value>
                    <fullName>issueadmin</fullName>
                </value>
                <value>
                    <fullName>codeviewer</fullName>
                </value>
                <value>
                    <fullName>user</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Ends__c</fullName>
        <formula>Organization__r.Trial_Ends__c</formula>
        <label>Trial Ends</label>
        <type>DateTime</type>
    </fields>
    <label>Cloud Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Email_Domain__c</columns>
        <columns>LastLogin__c</columns>
        <columns>LoginCount__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Organization_Key__c</columns>
        <columns>Company__c</columns>
        <columns>Organization__c</columns>
        <columns>Trial_Ends__c</columns>
        <columns>Billing_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cloud_Members_to_Filter</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Email_Domain__c</columns>
        <columns>LastLogin__c</columns>
        <columns>LoginCount__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Organization_Key__c</columns>
        <columns>Company__c</columns>
        <columns>Organization__c</columns>
        <columns>Trial_Ends__c</columns>
        <columns>Billing_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Domain__c</field>
            <operation>contains</operation>
            <value>abbvie</value>
        </filters>
        <label>Cloud Members to Filter</label>
    </listViews>
    <nameField>
        <label>CodeScan  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>